Added Codium extensions article and rearrange Lubuntu WM article

--- a/themes/css/article_style.css
+++ b/themes/css/article_style.css
@@ -21,6 +21,12 @@ header.articulo {
     font-size: 2.5rem;
 }
 
+/* Imagenes del artículo */
+img {
+    max-width: 60rem;
+    height: auto;
+}
+
 /* Imagen del header */
 img.imgHeader {
     max-width: 62rem;
