--- a/themes/css/article_style.css
+++ b/themes/css/article_style.css
@@ -115,7 +115,9 @@ header img.sanfmlogo {
 img.content {
     max-width: 55rem;
     height: auto;
-    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
