--- a/themes/css/article_style.css
+++ b/themes/css/article_style.css
@@ -105,7 +105,13 @@ header img.sanfmlogo {
     align-self: flex-start;
 }
 .content h2 {
+    border-radius: 25px;
     text-align: center;
+    background-color: rgb(255 255 255 / 50%);
+}
+.content h3 {
+    border-radius: 25px;
+    background-color: rgb(255 255 255 / 50%);
 }
 .content p {
     text-align: justify;
