--- a/themes/css/article_style.css
+++ b/themes/css/article_style.css
@@ -112,6 +112,7 @@ header img.sanfmlogo {
 .content h3 {
     border-radius: 25px;
     background-color: #bbb;
+    padding-left: 3rem;
 }
 .content p {
     text-align: justify;
